<resources>
    <string name="app_name">My Tasks</string>
    <string name="label_splash_what_do_first">Por onde devo começar?</string>
    <string name="message_splash_description_image">Desenho de uma pessoa com uma caneta em frente à uma prancheta com tarefas</string>
    <string name="message_home_empty_description_image">Desenho de uma pessoa pensativa em frente à um quadro vazio</string>
    <string name="label_home_title">Tarefas</string>
    <string name="label_all_lorem_ipsum">Lorem Ipsum</string>
    <string name="label_sample_data_hour">00/00/0000 00:00</string>
    <string name="label_home_fab_add_task">Adicionar Tarefa</string>
    <string name="message_item_task_menu_description">Opções de Tarefa</string>
    <string name="label_new_task">Nova Tarefa</string>
    <string name="label_new_task_title">Título</string>
    <string name="label_new_task_description">Descrição</string>
    <string name="label_new_task_sample_hour">Hora</string>
    <string name="label_new_task_sample_date">Data</string>
    <string name="label_all_cancel">Cancelar</string>
    <string name="label_new_task_create">Criar Tarefa</string>
    <string name="label_all_edit">Editar</string>
    <string name="label_all_delete">Deletar</string>
    <string name="label_all_update_task">Atualizar Tarefa</string>
    <string name="label_home_empty_nothing_here">Ops! Nada por aqui...</string>
</resources>